// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service Maps with a trial license /api/apm/service-map when there is data returns service map elements filtering by environment not defined 1`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.environment": "ENVIRONMENT_NOT_DEFINED",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.environment": "ENVIRONMENT_NOT_DEFINED",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
      },
    },
    Object {
      "data": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
      },
    },
    Object {
      "data": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-python",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-ruby",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~>postgresql",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>postgresql",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-go",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-ruby",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>elasticsearch",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>postgresql",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>redis",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-java",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-node",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~>postgresql",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-java",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-python",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.environment": "ENVIRONMENT_NOT_DEFINED",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-node",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
        },
      },
    },
  ],
}
`;

exports[`Service Maps with a trial license /api/apm/service-map when there is data returns the correct data 3`] = `
Array [
  Object {
    "data": Object {
      "agent.name": "python",
      "id": "opbeans-python",
      "service.name": "opbeans-python",
      "serviceAnomalyStats": Object {
        "actualValue": 24282.2352941176,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
        "serviceName": "opbeans-python",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">redis",
      "label": "redis",
      "span.destination.service.resource": "redis",
      "span.subtype": "redis",
      "span.type": "cache",
    },
  },
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "opbeans-node",
      "service.environment": "testing",
      "service.name": "opbeans-node",
      "serviceAnomalyStats": Object {
        "actualValue": 29300.5555555556,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-384f-high_mean_transaction_duration",
        "serviceName": "opbeans-node",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">postgresql",
      "label": "postgresql",
      "span.destination.service.resource": "postgresql",
      "span.subtype": "postgresql",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "opbeans-rum",
      "service.environment": "testing",
      "service.name": "opbeans-rum",
      "serviceAnomalyStats": Object {
        "actualValue": 2386500,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-384f-high_mean_transaction_duration",
        "serviceName": "opbeans-rum",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "java",
      "id": "opbeans-java",
      "service.environment": "production",
      "service.name": "opbeans-java",
      "serviceAnomalyStats": Object {
        "actualValue": 23879.7906976744,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-1369-high_mean_transaction_duration",
        "serviceName": "opbeans-java",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "rum-js",
      "id": "kibana-frontend",
      "service.environment": "production",
      "service.name": "kibana-frontend",
      "serviceAnomalyStats": Object {
        "actualValue": 2081800,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-1369-high_mean_transaction_duration",
        "serviceName": "kibana-frontend",
        "transactionType": "page-load",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "nodejs",
      "id": "kibana",
      "service.environment": "production",
      "service.name": "kibana",
      "serviceAnomalyStats": Object {
        "actualValue": 431063.266917293,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-production-1369-high_mean_transaction_duration",
        "serviceName": "kibana",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">feeds.elastic.co:443",
      "label": "feeds.elastic.co:443",
      "span.destination.service.resource": "feeds.elastic.co:443",
      "span.subtype": "http",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "agent.name": "go",
      "id": "opbeans-go",
      "service.environment": "testing",
      "service.name": "opbeans-go",
      "serviceAnomalyStats": Object {
        "actualValue": 34089.2957746479,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-testing-384f-high_mean_transaction_duration",
        "serviceName": "opbeans-go",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "agent.name": "ruby",
      "id": "opbeans-ruby",
      "service.name": "opbeans-ruby",
      "serviceAnomalyStats": Object {
        "actualValue": 121348.868852459,
        "anomalyScore": 0,
        "healthStatus": "healthy",
        "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
        "serviceName": "opbeans-ruby",
        "transactionType": "request",
      },
    },
  },
  Object {
    "data": Object {
      "id": ">elasticsearch",
      "label": "elasticsearch",
      "span.destination.service.resource": "elasticsearch",
      "span.subtype": "elasticsearch",
      "span.type": "db",
    },
  },
  Object {
    "data": Object {
      "agent.name": "dotnet",
      "id": "opbeans-dotnet",
      "service.environment": null,
      "service.name": "opbeans-dotnet",
    },
  },
  Object {
    "data": Object {
      "groupedConnections": Array [
        Object {
          "id": ">34.203.1.122:9243",
          "label": "34.203.1.122:9243",
          "span.destination.service.resource": "34.203.1.122:9243",
          "span.subtype": "https",
          "span.type": "external",
        },
        Object {
          "id": ">35.174.40.8:9243",
          "label": "35.174.40.8:9243",
          "span.destination.service.resource": "35.174.40.8:9243",
          "span.subtype": "https",
          "span.type": "external",
        },
        Object {
          "id": ">52.23.77.114:9243",
          "label": "52.23.77.114:9243",
          "span.destination.service.resource": "52.23.77.114:9243",
          "span.subtype": "https",
          "span.type": "external",
        },
        Object {
          "id": ">54.158.196.136:9243",
          "label": "54.158.196.136:9243",
          "span.destination.service.resource": "54.158.196.136:9243",
          "span.subtype": "https",
          "span.type": "external",
        },
      ],
      "id": "resourceGroup{kibana}",
      "label": "4 resources",
      "span.type": "external",
    },
  },
  Object {
    "data": Object {
      "id": "kibana-frontend~>feeds.elastic.co:443",
      "source": "kibana-frontend",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 2081800,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
      "target": ">feeds.elastic.co:443",
      "targetData": Object {
        "id": ">feeds.elastic.co:443",
        "label": "feeds.elastic.co:443",
        "span.destination.service.resource": "feeds.elastic.co:443",
        "span.subtype": "http",
        "span.type": "external",
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana-frontend~kibana",
      "source": "kibana-frontend",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 2081800,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
      "target": "kibana",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 431063.266917293,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana~>elasticsearch",
      "source": "kibana",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 431063.266917293,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~>postgresql",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-node",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-go~opbeans-python",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-go~opbeans-ruby",
      "source": "opbeans-go",
      "sourceData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~>postgresql",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-java~opbeans-go",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-python",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-java~opbeans-ruby",
      "source": "opbeans-java",
      "sourceData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>postgresql",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~>redis",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-node~opbeans-java",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-python",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "bidirectional": true,
      "id": "opbeans-node~opbeans-ruby",
      "source": "opbeans-node",
      "sourceData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>elasticsearch",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">elasticsearch",
      "targetData": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>postgresql",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~>redis",
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": ">redis",
      "targetData": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-python~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-python",
      "sourceData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~>postgresql",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": ">postgresql",
      "targetData": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-go",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-go",
      "targetData": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-java",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-node",
      "isInverseEdge": true,
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-ruby~opbeans-python",
      "source": "opbeans-ruby",
      "sourceData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-java",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 2386500,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-java",
      "targetData": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-node",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 2386500,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-node",
      "targetData": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-python",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 2386500,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-python",
      "targetData": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "opbeans-rum~opbeans-ruby",
      "source": "opbeans-rum",
      "sourceData": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 2386500,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
      "target": "opbeans-ruby",
      "targetData": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
  },
  Object {
    "data": Object {
      "id": "kibana~>resourceGroup{kibana}",
      "source": "kibana",
      "target": "resourceGroup{kibana}",
    },
  },
]
`;

exports[`Service Maps with a trial license when there is data with anomalies with the default apm user returns the correct anomaly stats 3`] = `
Object {
  "elements": Array [
    Object {
      "data": Object {
        "agent.name": "python",
        "id": "opbeans-python",
        "service.name": "opbeans-python",
        "serviceAnomalyStats": Object {
          "actualValue": 24282.2352941176,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-python",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">redis",
        "label": "redis",
        "span.destination.service.resource": "redis",
        "span.subtype": "redis",
        "span.type": "cache",
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "opbeans-node",
        "service.environment": "testing",
        "service.name": "opbeans-node",
        "serviceAnomalyStats": Object {
          "actualValue": 29300.5555555556,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-node",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">postgresql",
        "label": "postgresql",
        "span.destination.service.resource": "postgresql",
        "span.subtype": "postgresql",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "opbeans-rum",
        "service.environment": "testing",
        "service.name": "opbeans-rum",
        "serviceAnomalyStats": Object {
          "actualValue": 2386500,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-rum",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "java",
        "id": "opbeans-java",
        "service.environment": "production",
        "service.name": "opbeans-java",
        "serviceAnomalyStats": Object {
          "actualValue": 23879.7906976744,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "opbeans-java",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "rum-js",
        "id": "kibana-frontend",
        "service.environment": "production",
        "service.name": "kibana-frontend",
        "serviceAnomalyStats": Object {
          "actualValue": 2081800,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana-frontend",
          "transactionType": "page-load",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "nodejs",
        "id": "kibana",
        "service.environment": "production",
        "service.name": "kibana",
        "serviceAnomalyStats": Object {
          "actualValue": 431063.266917293,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-production-1369-high_mean_transaction_duration",
          "serviceName": "kibana",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">feeds.elastic.co:443",
        "label": "feeds.elastic.co:443",
        "span.destination.service.resource": "feeds.elastic.co:443",
        "span.subtype": "http",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "agent.name": "go",
        "id": "opbeans-go",
        "service.environment": "testing",
        "service.name": "opbeans-go",
        "serviceAnomalyStats": Object {
          "actualValue": 34089.2957746479,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-testing-384f-high_mean_transaction_duration",
          "serviceName": "opbeans-go",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "agent.name": "ruby",
        "id": "opbeans-ruby",
        "service.name": "opbeans-ruby",
        "serviceAnomalyStats": Object {
          "actualValue": 121348.868852459,
          "anomalyScore": 0,
          "healthStatus": "healthy",
          "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
          "serviceName": "opbeans-ruby",
          "transactionType": "request",
        },
      },
    },
    Object {
      "data": Object {
        "id": ">elasticsearch",
        "label": "elasticsearch",
        "span.destination.service.resource": "elasticsearch",
        "span.subtype": "elasticsearch",
        "span.type": "db",
      },
    },
    Object {
      "data": Object {
        "agent.name": "dotnet",
        "id": "opbeans-dotnet",
        "service.environment": null,
        "service.name": "opbeans-dotnet",
      },
    },
    Object {
      "data": Object {
        "groupedConnections": Array [
          Object {
            "id": ">34.203.1.122:9243",
            "label": "34.203.1.122:9243",
            "span.destination.service.resource": "34.203.1.122:9243",
            "span.subtype": "https",
            "span.type": "external",
          },
          Object {
            "id": ">35.174.40.8:9243",
            "label": "35.174.40.8:9243",
            "span.destination.service.resource": "35.174.40.8:9243",
            "span.subtype": "https",
            "span.type": "external",
          },
          Object {
            "id": ">52.23.77.114:9243",
            "label": "52.23.77.114:9243",
            "span.destination.service.resource": "52.23.77.114:9243",
            "span.subtype": "https",
            "span.type": "external",
          },
          Object {
            "id": ">54.158.196.136:9243",
            "label": "54.158.196.136:9243",
            "span.destination.service.resource": "54.158.196.136:9243",
            "span.subtype": "https",
            "span.type": "external",
          },
        ],
        "id": "resourceGroup{kibana}",
        "label": "4 resources",
        "span.type": "external",
      },
    },
    Object {
      "data": Object {
        "id": "kibana-frontend~>feeds.elastic.co:443",
        "source": "kibana-frontend",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "kibana-frontend",
          "service.environment": "production",
          "service.name": "kibana-frontend",
          "serviceAnomalyStats": Object {
            "actualValue": 2081800,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "kibana-frontend",
            "transactionType": "page-load",
          },
        },
        "target": ">feeds.elastic.co:443",
        "targetData": Object {
          "id": ">feeds.elastic.co:443",
          "label": "feeds.elastic.co:443",
          "span.destination.service.resource": "feeds.elastic.co:443",
          "span.subtype": "http",
          "span.type": "external",
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana-frontend~kibana",
        "source": "kibana-frontend",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "kibana-frontend",
          "service.environment": "production",
          "service.name": "kibana-frontend",
          "serviceAnomalyStats": Object {
            "actualValue": 2081800,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "kibana-frontend",
            "transactionType": "page-load",
          },
        },
        "target": "kibana",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 431063.266917293,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana~>elasticsearch",
        "source": "kibana",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "kibana",
          "service.environment": "production",
          "service.name": "kibana",
          "serviceAnomalyStats": Object {
            "actualValue": 431063.266917293,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "kibana",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~>postgresql",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-node",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-go~opbeans-python",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-go~opbeans-ruby",
        "source": "opbeans-go",
        "sourceData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~>postgresql",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-java~opbeans-go",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-python",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-java~opbeans-ruby",
        "source": "opbeans-java",
        "sourceData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>postgresql",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~>redis",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-node~opbeans-java",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-python",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "bidirectional": true,
        "id": "opbeans-node~opbeans-ruby",
        "source": "opbeans-node",
        "sourceData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>elasticsearch",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">elasticsearch",
        "targetData": Object {
          "id": ">elasticsearch",
          "label": "elasticsearch",
          "span.destination.service.resource": "elasticsearch",
          "span.subtype": "elasticsearch",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>postgresql",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~>redis",
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": ">redis",
        "targetData": Object {
          "id": ">redis",
          "label": "redis",
          "span.destination.service.resource": "redis",
          "span.subtype": "redis",
          "span.type": "cache",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-python~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-python",
        "sourceData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~>postgresql",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": ">postgresql",
        "targetData": Object {
          "id": ">postgresql",
          "label": "postgresql",
          "span.destination.service.resource": "postgresql",
          "span.subtype": "postgresql",
          "span.type": "db",
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-go",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-go",
        "targetData": Object {
          "agent.name": "go",
          "id": "opbeans-go",
          "service.environment": "testing",
          "service.name": "opbeans-go",
          "serviceAnomalyStats": Object {
            "actualValue": 34089.2957746479,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-go",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-java",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-node",
        "isInverseEdge": true,
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-ruby~opbeans-python",
        "source": "opbeans-ruby",
        "sourceData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-java",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 2386500,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-java",
        "targetData": Object {
          "agent.name": "java",
          "id": "opbeans-java",
          "service.environment": "production",
          "service.name": "opbeans-java",
          "serviceAnomalyStats": Object {
            "actualValue": 23879.7906976744,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-production-1369-high_mean_transaction_duration",
            "serviceName": "opbeans-java",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-node",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 2386500,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-node",
        "targetData": Object {
          "agent.name": "nodejs",
          "id": "opbeans-node",
          "service.environment": "testing",
          "service.name": "opbeans-node",
          "serviceAnomalyStats": Object {
            "actualValue": 29300.5555555556,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-node",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-python",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 2386500,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-python",
        "targetData": Object {
          "agent.name": "python",
          "id": "opbeans-python",
          "service.name": "opbeans-python",
          "serviceAnomalyStats": Object {
            "actualValue": 24282.2352941176,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-python",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "opbeans-rum~opbeans-ruby",
        "source": "opbeans-rum",
        "sourceData": Object {
          "agent.name": "rum-js",
          "id": "opbeans-rum",
          "service.environment": "testing",
          "service.name": "opbeans-rum",
          "serviceAnomalyStats": Object {
            "actualValue": 2386500,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-testing-384f-high_mean_transaction_duration",
            "serviceName": "opbeans-rum",
            "transactionType": "page-load",
          },
        },
        "target": "opbeans-ruby",
        "targetData": Object {
          "agent.name": "ruby",
          "id": "opbeans-ruby",
          "service.name": "opbeans-ruby",
          "serviceAnomalyStats": Object {
            "actualValue": 121348.868852459,
            "anomalyScore": 0,
            "healthStatus": "healthy",
            "jobId": "apm-environment_not_defined-5626-high_mean_transaction_duration",
            "serviceName": "opbeans-ruby",
            "transactionType": "request",
          },
        },
      },
    },
    Object {
      "data": Object {
        "id": "kibana~>resourceGroup{kibana}",
        "source": "kibana",
        "target": "resourceGroup{kibana}",
      },
    },
  ],
}
`;
